--- a/Project/J6js/d4/demo.html
+++ b/Project/J6js/d4/demo.html
@@ -1,50 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-	<title>RESTful Consumer - AngularJS</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <meta charset="UTF-8">
+    <title>RESTful Consumer - AngularJS</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body ng-app="app" ng-controller="ctrl">
-	<h2>RESTful Consumer - AngularJS</h2>
-	<div>
-		<input ng-model="form.email" placeholder="Email Address?"><br>
-		<input ng-model="form.fullname" placeholder="Full Name?"><br>
-		<input ng-model="form.marks" placeholder="Average Marks?"><br>
-		<input ng-model="form.gender" ng-value="true" type="radio">Male<br>
-		<input ng-model="form.gender" ng-value="false" type="radio">Female<br>
-		<select>
-			<option value="VN">Việt nam</option>
-			<option value="US">United States</option>
-		</select>
-		<hr>
-		<button ng-click="create()">Create</button>
-		<button ng-click="update()">Update</button>
-		<button ng-click="delete()">Delete</button>
-		<button ng-click="reset()">Reset</button>
-	</div>
-	<p>
-	<table style="width: 100%" border="1">
-	  <tr>
-	  	<th>Email Address</th>
-	  	<th>Full Name</th>
-	  	<th>Marks</th>
-	  	<th>Gender</th>
-	  	<th>country</th>
-	  	<th></th>
-	  </tr>
-	  <tr ng-repeat="(key,stu) in items">
-	  		<td>{{stu.email}}</td>
-	  		<td>{{stu.fullname}}</td>
-	  		<td>{{stu.marks}}</td>
-	  		<td>{{stu.gender?'Male':'Female'}}</td>
-	  		<td>{{stu.country}}</td>
-	  		<td>
-	  			<button ng-click="edit(key)">Edit</button>
-	  			<button ng-click="delete(key)">Delete</button>
-	  		</td>
-	  </tr>
-	</table>
-	<script src="demo-ctrl.js"></script>
+<body ng-app="app" ng-controller="ctrl" class="bg-light">
+    <div class="container mt-4">
+        <h2 class="text-center text-primary mb-4">RESTful Consumer - AngularJS</h2>
+        
+        <div class="card shadow p-4">
+            <div class="row mb-3">
+                <div class="col-md-6 mb-3">
+                    <label for="email" class="form-label">Email Address</label>
+                    <input id="email" ng-model="form.email" class="form-control" placeholder="Enter Email">
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label for="fullname" class="form-label">Full Name</label>
+                    <input id="fullname" ng-model="form.fullname" class="form-control" placeholder="Enter Full Name">
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label for="marks" class="form-label">Average Marks</label>
+                    <input id="marks" ng-model="form.marks" type="number" class="form-control" placeholder="Enter Marks">
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label class="form-label">Gender</label>
+                    <div class="form-check">
+                        <input ng-model="form.gender" ng-value="true" class="form-check-input" type="radio" id="male">
+                        <label for="male" class="form-check-label">Male</label>
+                    </div>
+                    <div class="form-check">
+                        <input ng-model="form.gender" ng-value="false" class="form-check-input" type="radio" id="female">
+                        <label for="female" class="form-check-label">Female</label>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label for="country" class="form-label">Country</label>
+                    <select id="country" ng-model="form.country" class="form-select">
+                        <option value="VN">Việt Nam</option>
+                        <option value="US">United States</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="text-center">
+                <button class="btn btn-primary me-2" ng-click="create()">Create</button>
+                <button class="btn btn-warning me-2" ng-click="update()">Update</button>
+                <button class="btn btn-danger me-2" ng-click="delete()">Delete</button>
+                <button class="btn btn-secondary" ng-click="reset()">Reset</button>
+            </div>
+        </div>
+
+        <div class="card mt-4 shadow p-4">
+            <h4 class="text-secondary mb-3">Student List</h4>
+            <table class="table table-bordered table-hover table-striped">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Email Address</th>
+                        <th>Full Name</th>
+                        <th>Marks</th>
+                        <th>Gender</th>
+                        <th>Country</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="(key,stu) in items">
+                        <td>{{stu.email}}</td>
+                        <td>{{stu.fullname}}</td>
+                        <td>{{stu.marks}}</td>
+                        <td>{{stu.gender ? 'Male' : 'Female'}}</td>
+                        <td>{{stu.country}}</td>
+                        <td>
+                            <div class="btn-group">
+                                <button class="btn btn-info btn-sm" ng-click="edit(key)">Edit</button>
+                                <button class="btn btn-danger btn-sm" ng-click="delete(key)">Delete</button>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <script src="demo-ctrl.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
